Quick spacing fix

--- a/_defaults.scss
+++ b/_defaults.scss
@@ -117,7 +117,7 @@ $gemini-use-defaults: (
   icons:          false,
   link-complex:   false,
   media:          false,
-  multt-list:     false,
+  multi-list:      false,
   nav:            false,
   overlay:        false,
   pagination:     false,
